Pull upstream bugfix from 37a64baea

Original commit message:

swrast: don't try to do depth testing if there's no depth buffer

Fixes piglit hiz-depth-stencil-test-fbo-d0-s8 crash.
See http://bugs.freedesktop.org/show_bug.cgi?id=37907